--- a/index.html
+++ b/index.html
@@ -3,21 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"/>
     <link rel="stylesheet" href=".Assets/css/reset.css" />
     <link rel="stylesheet" href="Assets/css/style.css" />    
-    <title>Albistu Work Day Schedule</title>
+    <title>Albistu Weather App</title>
   </head>
 
-  
 <header>
-      <h1>Work Day calendar App</h1>
-      <p id="today"></p>
+      <h1>Albistu Weather App</h1>
 </header>
 
 <body>
+  <!-- WHEN I search for a city
+  // THEN I am presented with current and future conditions for 
+  //that city and that city is added to the search history -->
+  <div>
+    <h1>
+      Search for a City
+    </h1>
+    <textarea>
 
+    </textarea>
+    <button>
+      Search
+    </button>
+  </div>
+  
+  
+  <!-- WHEN I view current weather conditions for that city
+  // THEN I am presented with the city name, the date, an icon 
+  // representation of weather conditions, the temperature, 
+  // the humidity, and the the wind speed -->
+  
+  
+  
+  <!-- WHEN I view future weather conditions for that city
+  // THEN I am presented with a 5-day forecast that displays 
+  // the date, an icon representation of weather conditions, 
+  // the temperature, the wind speed, and the humidity -->
+  
+  
+  
+  <!-- WHEN I click on a city in the search history
+  // THEN I am again presented with current and 
+  // future conditions for that city -->
 
 <!-- The JS scripts i used-->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
