added more to HTML, did some CSS

--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 <header>
       <h1>Albistu Weather App</h1>
 </header>
-
+<br>
 <body>
   <!-- WHEN I search for a city
   // THEN I am presented with current and future conditions for 
   //that city and that city is added to the search history -->
-  <div>
+  <div id="searchSection">
     <h1>
       Search for a City
     </h1>
     <textarea>
 
     </textarea>
+
     <button>
       Search
     </button>
