webapp mock-up done, JS Next

--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
     <button>
       Search
     </button>
+
+    <div id="previousCities"></div>
   </div>
   
+  <section id="weatherResults">
+    <h2>City Weather Information</h2>
+  </section>
   
   <!-- WHEN I view current weather conditions for that city
   // THEN I am presented with the city name, the date, an icon 
@@ -52,5 +57,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="Assets/js/script.js"></script>
+
 </body>
 </html>
